Forgot to update the js and CSS I reckon

--- a/public/dynamic island/index.html
+++ b/public/dynamic island/index.html
@@ -12,7 +12,7 @@
 <body>
    <div class="background">
       <div class="dynamic-island">
-
+         <img src="" alt="">
       </div>
       <div class="indicator">
          <div class="upper-indicator"></div>
