--- a/public/520/index.html
+++ b/public/520/index.html
@@ -144,6 +144,7 @@
    secondBtn.onclick = function () {
       btn.style.display = 'none';
       moreWords.innerHTML = '<h3 class="centered-text2">在这个特殊的节日, 祝福我们能相爱到永远!</h3>';
+            secondBtn.textContent = "点不动了, 520快乐!"
       }
 
 </script>
