--- a/public/520/index.html
+++ b/public/520/index.html
@@ -113,37 +113,59 @@
       <a href="#tab1" class="loveTab">520 祝福</a>
       <a href="#tab2" class="birthdayTab">生日祝福</a>
       <a href="#tab3" class="aboutTab">关于</a>
+      <a href="#tab4" class="letterTab">信件</a>
    </div>
    <div class="love"></div>
    <div class="birthday centered-text2"></div>
    <div class="about centered-text2"></div>
+   <div class="letter centered-text2"></div>
 </body>
 <script src="./520.js"></script>
 <script>
    const tab1 = document.querySelector('.loveTab');
    const tab2 = document.querySelector('.birthdayTab');
    const tab3 = document.querySelector('.aboutTab');
+   const tab4 = document.querySelector('.letterTab');
 
    tab1.addEventListener('click', function () {
       deleteBirthday();
       deleteAbout();
+      deleteLetter();
       create520();
    });
    tab2.addEventListener('click', function () {
       delete520();
       deleteAbout();
+      deleteLetter();
       createBirthday();
    });
    tab3.addEventListener('click', function () {
       delete520();
       deleteBirthday();
+      deleteLetter();
       createAbout();
    });
-
+   tab4.addEventListener('click', function () {
+      delete520();
+      deleteBirthday();
+      deleteAbout();
+      createLetter();
+   });
 
    // 点击按钮显示祝福
 
-
+   function createLetter() {
+      const letterDiv = document.querySelector('.letter');
+      letterDiv.innerHTML = `
+         <h2>一封信</h2>
+         <p>亲爱的你：</p>
+         <p>在这个特别的日子里，想对你说声谢谢，感谢你的陪伴与支持。无论未来怎样，希望我们都能彼此珍惜，共同前行。</p>
+         <p>—— 520快乐</p>
+      `;
+   }
+   function deleteLetter() {
+      document.querySelector('.letter').innerHTML = '';
+   }
 </script>
 
 </html>
