Added some p style on letter tab

--- a/public/520/index.html
+++ b/public/520/index.html
@@ -105,6 +105,18 @@
          margin-left: auto;
          margin-right: auto;
       }
+
+      .letter {
+         display: flex;
+         flex-direction: column;
+         align-items: center;
+      }
+
+      .letter-content {
+         text-align: left;
+         max-width: 600px;
+         width: 100%;
+      }
    </style>
 </head>
 
@@ -157,27 +169,29 @@
    function createLetter() {
       const letterDiv = document.querySelector('.letter');
       letterDiv.innerHTML = `
-         <h2>一封信</h2>
-         <p>亲爱的宝贝，</p>
-         <p>在这个承上启下的时间点，我觉得我还是要真诚一些，告诉你一些真实的想法。希望能给你做一个参考。</p>
-         <p>因为这个孩子我们的关系开启了加速，好多未来的计划提前进入日程。我相信你和我都仍然还在一个承压的阶段，还在手忙脚乱，对未来有些迷茫。</p>
-         <p>咱们的关系似乎一直也是由我来主导，所以我感觉我其实更承受了一些压力，同时也没有很好地把一些决策的原因告诉你，经常注意到你的眼里产生很多疑惑，让你我之间的沟通产生一些障碍。</p>
-         <p>首先我肯定是爱你的，这个你不用去怀疑。只是这个爱的背后还有很多别的复杂的东西。</p>
-         <p>当初我想要和你好的主要原因，其实就是觉得你经济条件很好，这个条件可以让我选择忽略你其他的劣势。当然并不是说你有什么明显的不足，只是好的经济条件是我当时最大的选择权重。因为在外漂泊多年，深知能做到立足在这个地方的不容易。和你相处的前几个月，让我第一次有了那种稳定的感觉。</p>
-         <p>我确实是优柔寡断的，但这种优柔寡但是基于不想伤害任何人。就像前一段关系，我的确是很早就想结束了，但是每次想到最后那种令人伤心的场景，就会迟迟下不了决心。</p>
-         <p>我因此付出了代价，开始了非常痛苦的时期，甚至一直延续到现在。这是一种自责，觉得完全做错了，但是又没办法弥补。并且由于这个错误的不光彩，我只能一直在自我消化，但是收效甚微。并且我一直在掩饰这种痛苦，深怕这种痛苦会影响到你，让你觉得生活因为我变得灰暗。</p>
-         <p>这件事情似乎已经变成一个阴霾，让我们这段关系，变得小心翼翼。你从一个善良快乐的姑娘变得易怒多疑，甚至对我严加管控。我一直选择去接受，因为我知道你内心依然是那个我最初认识的女孩，这也是到现在我依然爱你的原因。</p>
-         <p>但是这仍然是个问题，人总有想选择逃避的时候，我也一样。痛苦在不断积累后，我时不时开始思考你最大的经济优势和善良纯真，是不是能够支撑我再继续坚持下去。毕竟这次选择，将会决定人生的后六十年，因为我不想再中断并且给你造成伤害。</p>
-         <p>这种想法会有一个出现的频率，时不时地进入脑海里，要不要放弃这一切，再重新开始。虽然这是不负责任的，同时也会让你我非常痛苦，甚至让你承受切肤之痛，但是我还是要承认，我仍然抱有这种想法。</p>
-         <p>上面这种想法可能也是因为我们还算年轻，激素水平还在，还没有安于当下。你仍然貌美如花，我也没沉沦到中年男人的各种爱好中。</p>
-         <p>我时常反思当初把经济条件作为首要标准，是不是开始对我反噬。因为远远高于我的经济条件，会产生一种寄人篱下的感觉，特别是在那件事发生之后，这种感觉变得更加强烈。并且或许我可能真的有些大男子主义，我开始有一种无法支配自己生活的恐惧。这种恐惧源自于你的高期待，会让我自己的能力无法满足你的预期。这就会让我有种自卑和无力感，觉得物质上的快乐开始变得难以企及。然后每当想到在我们结婚之后，这种现象和感觉可能持续甚至放大的时候，我会再次萌生想要逃避的想法。与之对应的，就是我开始问自己，要不要从零开始，要不要慢慢积累，但是又无法与现有的条件相割舍。</p>
-         <p>所以我其实并没有定性，内心充斥着各种矛盾。这也是我之前迟迟没有下决心的原因。因为我担心草率决定后，因为这些不确定的因素会再次伤害到你。这就是我之前所表达的，正是因为我想负责，才会这么谨慎地决定。而不是冲动结婚，最后却草草收场。</p>
-         <p>这也是我前两天特别纠结的原因，并不是我不想负责或者不够爱你，而是突如其来的孩子，会是另外一个不确定因素。叠加到我自己的内心的各种矛盾，让我对未来产生更多的不安。</p>
-         <p>还要要告诉你一件让你扎心的事情，如果我需要搬家的话，我那里还几箱上一任的东西，我需要想办法在不联系的情况寄回去。虽然这是超出我的责任范围的，但是我觉得我还是不能随意处置别人的财产。</p>
-         <p>最后，就像我们前几天讨论的，如果我们选择接受这个孩子或者选择继续走下去，我都会把责任都担好，尽自己最大的能力把事情做好，让你满意。</p>
-         <p>只是因为这些事情都不是在我们规划内的，而他们都是可规划的，我就有种没有把事情做好的自责，然后怕不确定性事情发生的担心。</p>
-         <p>我觉得还是把这些写出来比较好，你也一直希望我能真诚地写一些东西给你。但是请原谅我，之前我一直都无法面对这一切。把这些告诉你，你好在内心有个权衡，再做决定是否迎接这个孩子或者是否再和我走下去。无论你做什么决定我都会尊重你，也会依然爱你。</p>
-         <p>爱你的老头</p>
+         <div class="letter-content">
+            <h2>一封信</h2>
+            <p>亲爱的宝贝，</p>
+            <p>在这个承上启下的时间点，我觉得我还是要真诚一些，告诉你一些真实的想法。希望能给你做一个参考。</p>
+            <p>因为这个孩子我们的关系开启了加速，好多未来的计划提前进入日程。我相信你和我都仍然还在一个承压的阶段，还在手忙脚乱，对未来有些迷茫。</p>
+            <p>咱们的关系似乎一直也是由我来主导，所以我感觉我其实更承受了一些压力，同时也没有很好地把一些决策的原因告诉你，经常注意到你的眼里产生很多疑惑，让你我之间的沟通产生一些障碍。</p>
+            <p>首先我肯定是爱你的，这个你不用去怀疑。只是这个爱的背后还有很多别的复杂的东西。</p>
+            <p>当初我想要和你好的主要原因，其实就是觉得你经济条件很好，这个条件可以让我选择忽略你其他的劣势。当然并不是说你有什么明显的不足，只是好的经济条件是我当时最大的选择权重。因为在外漂泊多年，深知能做到立足在这个地方的不容易。和你相处的前几个月，让我第一次有了那种稳定的感觉。</p>
+            <p>我确实是优柔寡断的，但这种优柔寡但是基于不想伤害任何人。就像前一段关系，我的确是很早就想结束了，但是每次想到最后那种令人伤心的场景，就会迟迟下不了决心。</p>
+            <p>我因此付出了代价，开始了非常痛苦的时期，甚至一直延续到现在。这是一种自责，觉得完全做错了，但是又没办法弥补。并且由于这个错误的不光彩，我只能一直在自我消化，但是收效甚微。并且我一直在掩饰这种痛苦，深怕这种痛苦会影响到你，让你觉得生活因为我变得灰暗。</p>
+            <p>这件事情似乎已经变成一个阴霾，让我们这段关系，变得小心翼翼。你从一个善良快乐的姑娘变得易怒多疑，甚至对我严加管控。我一直选择去接受，因为我知道你内心依然是那个我最初认识的女孩，这也是到现在我依然爱你的原因。</p>
+            <p>但是这仍然是个问题，人总有想选择逃避的时候，我也一样。痛苦在不断积累后，我时不时开始思考你最大的经济优势和善良纯真，是不是能够支撑我再继续坚持下去。毕竟这次选择，将会决定人生的后六十年，因为我不想再中断并且给你造成伤害。</p>
+            <p>这种想法会有一个出现的频率，时不时地进入脑海里，要不要放弃这一切，再重新开始。虽然这是不负责任的，同时也会让你我非常痛苦，甚至让你承受切肤之痛，但是我还是要承认，我仍然抱有这种想法。</p>
+            <p>上面这种想法可能也是因为我们还算年轻，激素水平还在，还没有安于当下。你仍然貌美如花，我也没沉沦到中年男人的各种爱好中。</p>
+            <p>我时常反思当初把经济条件作为首要标准，是不是开始对我反噬。因为远远高于我的经济条件，会产生一种寄人篱下的感觉，特别是在那件事发生之后，这种感觉变得更加强烈。并且或许我可能真的有些大男子主义，我开始有一种无法支配自己生活的恐惧。这种恐惧源自于你的高期待，会让我自己的能力无法满足你的预期。这就会让我有种自卑和无力感，觉得物质上的快乐开始变得难以企及。然后每当想到在我们结婚之后，这种现象和感觉可能持续甚至放大的时候，我会再次萌生想要逃避的想法。与之对应的，就是我开始问自己，要不要从零开始，要不要慢慢积累，但是又无法与现有的条件相割舍。</p>
+            <p>所以我其实并没有定性，内心充斥着各种矛盾。这也是我之前迟迟没有下决心的原因。因为我担心草率决定后，因为这些不确定的因素会再次伤害到你。这就是我之前所表达的，正是因为我想负责，才会这么谨慎地决定。而不是冲动结婚，最后却草草收场。</p>
+            <p>这也是我前两天特别纠结的原因，并不是我不想负责或者不够爱你，而是突如其来的孩子，会是另外一个不确定因素。叠加到我自己的内心的各种矛盾，让我对未来产生更多的不安。</p>
+            <p>还要要告诉你一件让你扎心的事情，如果我需要搬家的话，我那里还几箱上一任的东西，我需要想办法在不联系的情况寄回去。虽然这是超出我的责任范围的，但是我觉得我还是不能随意处置别人的财产。</p>
+            <p>最后，就像我们前几天讨论的，如果我们选择接受这个孩子或者选择继续走下去，我都会把责任都担好，尽自己最大的能力把事情做好，让你满意。</p>
+            <p>只是因为这些事情都不是在我们规划内的，而他们都是可规划的，我就有种没有把事情做好的自责，然后怕不确定性事情发生的担心。</p>
+            <p>我觉得还是把这些写出来比较好，你也一直希望我能真诚地写一些东西给你。但是请原谅我，之前我一直都无法面对这一切。把这些告诉你，你好在内心有个权衡，再做决定是否迎接这个孩子或者是否再和我走下去。无论你做什么决定我都会尊重你，也会依然爱你。</p>
+            <p>爱你的老头</p>
+         </div>
       `;
    }
    function deleteLetter() {
